add first example and exercise

--- a/src/components/CodeEditor/CodeEditor.module.scss
+++ b/src/components/CodeEditor/CodeEditor.module.scss
@@ -1,7 +1,8 @@
 .wrapper {
   &>p {
     color: gray;
-    margin-bottom: 0.4rem;
+    margin-top: 0 !important;
+    margin-bottom: 0.4rem !important;
   }
 
   &>div {
