--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,6 +1,61 @@
 .wrapper {
+  margin: auto;
+  max-width: 1000px;
+
   h1 {
+    font-size: 2.75rem;
     margin-block: 2rem;
     text-align: center;
+  }
+
+  section {
+    padding: 1rem;
+    margin-block: 1rem;
+    border-radius: 10px;
+    background-color: #30333d;
+    border: solid 1.5px #4e5567;
+
+    h2 {
+      background: none;
+      border-radius: 0;
+      border-bottom: solid 1.5px #6a6d73;
+      padding-bottom: 1rem;
+      padding-inline: 0.15rem;
+    }
+
+    ul, ol, p {
+      white-space: pre-line;
+      margin-block: 1.25rem;
+
+      &:last-child {
+        margin-block-end: 0;
+      }
+    }
+
+    li {
+      margin-inline-start: 1.5rem;
+      &::marker {
+        color: rgb(153, 165, 253);
+      }
+    }
+
+    &[data-example] {
+      background-color: #2a2c36;
+      border: none;
+    }
+    
+    &[data-exercise] {
+      background-color: rgba(255, 255, 255, 0.022);
+      border: solid 1.5px #6a6d73;
+    }
+
+    &[data-info] {
+      h2 {
+        background-color: #444a5a;
+        padding: 0.5rem 0.75rem;
+        border-radius: 8px;
+        border: none;
+      }
+    }
   }
 }
