--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0.5rem;
+  margin-bottom: 1.5rem;
   background-color: rgb(25, 25, 32);
   color: white;
 }
