--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,3 +27,12 @@ button {
     cursor: pointer;
   }
 }
+
+a {
+  color: rgb(101, 203, 232);
+}
+
+footer {
+  text-align: center;
+  color: rgb(159, 159, 200);
+}
