--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -8,6 +8,14 @@
     text-align: center;
   }
 
+  code {
+    font-family: var(--font-roboto-mono);
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 3px;
+    padding-inline: 3px;
+    margin-inline: 2px;
+  }
+
   section {
     padding: 1rem;
     margin-block: 1.25rem;
